# Ascend-mstt

./: .gitignore  .gitmodules  OWNERS  README.md  t.py  公网URL说明.md  无标杆性能基线.md
debug/accuracy_tools/: CMakeLists.txt  MANIFEST.in  README.md  README_POC.md  __init__.py  build.sh  setup.py
debug/accuracy_tools/api_accuracy_checker/: README.md  api_accuracy_checker_online.md  config.yaml
debug/accuracy_tools/api_accuracy_checker/bench_functions/: __init__.py  apply_adam_w.py  confusion_transpose.py  fast_gelu.py  layer_norm_eval.py  linear.py  matmul_backward.py  npu_fusion_attention.py  rms_norm.py  rotary_mul.py  scaled_mask_softmax.py  swiglu.py
debug/accuracy_tools/api_accuracy_checker/common/: base_api.py  config.py  function_factory.py  utils.py
debug/accuracy_tools/api_accuracy_checker/compare/: algorithm.py  api_precision_compare.py  api_precision_standard.yaml  api_precision_threshold.yaml  benchmark_compare.py  compare.py  compare_column.py  compare_utils.py
debug/accuracy_tools/api_accuracy_checker/doc/: API Accuracy Checker预检工具标准性能基线报告.md
debug/accuracy_tools/api_accuracy_checker/dump/: api_info.py  dispatch.py  dump.py  dump_scope.py  info_dump.py  torch_ops_config.yaml
debug/accuracy_tools/api_accuracy_checker/hook_module/: hook_module.py  register_hook.py  support_wrap_ops.yaml  utils.py  wrap_aten.py  wrap_functional.py  wrap_npu_custom.py  wrap_tensor.py  wrap_torch.py
debug/accuracy_tools/api_accuracy_checker/run_ut/: data_generate.py  multi_run_ut.py  run_overflow_check.py  run_ut.py  run_ut_utils.py
debug/accuracy_tools/api_accuracy_checker/tensor_transport_layer/: attl.py  client.py  device_dispatch.py  server.py
debug/accuracy_tools/api_accuracy_checker/test/: run_ut.py
debug/accuracy_tools/api_checker/: api_mapping.json  main.py  run_ut.py  start.sh  ut_base.py
debug/accuracy_tools/api_checker/common/: json_parser.py  logger.py  utils.py
debug/accuracy_tools/api_checker/compare/: algorithm.py  compare.py  compare_utils.py
debug/accuracy_tools/api_checker/ut_case/: Add_ut.py  ArgMaxWithValue_ut.py  AssignAdd_ut.py  Assign_ut.py  BatchMatMul_ut.py  BroadcastTo_ut.py  Concat_ut.py  Conv2D_ut.py  Equal_ut.py  GreaterEqual_ut.py  Greater_ut.py  LessEqual_ut.py  Less_ut.py  LogicalAnd_ut.py  LogicalOr_ut.py  MatMul_ut.py  Maximum_ut.py  Minimum_ut.py  NotEqual_ut.py  OneHot_ut.py  ReLU_ut.py  ReduceAll_ut.py  ReduceMean_ut.py  Squeeze_ut.py  Sub_ut.py  common_ut.py
debug/accuracy_tools/atat/: README.md  atat.py
debug/accuracy_tools/atat/config/: README.md  config.json
debug/accuracy_tools/atat/core/: common_config.py  file_check_util.py  log.py  utils.py
debug/accuracy_tools/atat/mindspore/: ms_config.py  service.py
debug/accuracy_tools/atat/pytorch/: __init__.py  module_processer.py  parse.py  pt_config.py  service.py  utils.py
debug/accuracy_tools/atat/test/: run_ut.py  test_module_processer.py
debug/accuracy_tools/cmake/: Findcpython.cmake  Findgtest.cmake  Findmockcpp.cmake  Findnlohmannjson.cmake  Findopenssl.cmake  Findprotobuf.cmake  Findre2.cmake  config.ini  download_opensource.sh  utils.cmake
debug/accuracy_tools/grad_tool/: README.md  grad_comparator.py  grad_monitor.py  grad_stat_csv.py  level_adapter.py  utils.py
debug/accuracy_tools/grad_tool/common/: base_comparator.py  base_monitor.py  constant.py  utils.py
debug/accuracy_tools/grad_tool/grad_ms/: global_context.py  grad_analyzer.py  grad_comparator.py  grad_monitor.py  grad_stat_csv.py  hook.py  utils.py
debug/accuracy_tools/grad_tool/grad_pt/: grad_comparator.py  grad_monitor.py  grad_stat_csv.py  level_adapter.py  utils.py
debug/accuracy_tools/grad_tool/test/: run_test.sh  run_ut.py
debug/accuracy_tools/kj600/: README.md  pyproject.toml  训练状态监控工具性能基线.md
debug/accuracy_tools/kj600/kj600/: anomaly_detect.py  anomaly_inform.py  config.json  const.py  database.py  features.py  module_hook.py  module_metric.py  module_spec_verifier.py  optimizer_collect.py  utils.py  visualizer.py
debug/accuracy_tools/monitor/: README.md  训练状态监控工具性能基线.md
debug/accuracy_tools/monitor/monitor/: anomaly_detect.py  anomaly_inform.py  features.py  module_hook.py  module_metric.py  module_spec_verifier.py  utils.py  visualizer.py
debug/accuracy_tools/msprobe/: CMakeLists.txt  README.md  __init__.py  atat.py  config.json  msprobe.py
debug/accuracy_tools/msprobe/anomaly_analyse/: analyzer.py  graph.py  utils.py
debug/accuracy_tools/msprobe/ccsrc/: CMakeLists.txt
debug/accuracy_tools/msprobe/code_mapping/: bind.py  cmd_parser.py  graph.py  processor.py
debug/accuracy_tools/msprobe/config/: README.md  config.json
debug/accuracy_tools/msprobe/core/: __init__.py  common_config.py  hook_manager.py  service.py
debug/accuracy_tools/msprobe/docs/: 01.installation.md  02.config_introduction.md  03.config_examples.md  04.acl_config_examples.md  04.kernel_dump_PyTorch.md  05.data_dump_PyTorch.md  06.data_dump_MindSpore.md  07.accuracy_checker_PyTorch.md  08.accuracy_checker_online_PyTorch.md  08.accuracy_checker_online_Pytorch.md  09.accuracy_checker_MindSpore.md  10.accuracy_compare_PyTorch.md  11.accuracy_compare_MindSpore.md  12.overflow_check_PyTorch.md  13.overflow_check_MindSpore.md  14.data_parse_PyTorch.md  15.free_benchmarking_PyTorch.md  16.free_benchmarking_MindSpore.md  17.grad_probe.md  18.online_dispatch.md  (+28 more)
debug/accuracy_tools/ptdbg_ascend/: CMakeLists.txt  README.md  RELEASE.md  __init__.py  configure.py
msmonitor/dynolog_npu/cli/: Cargo.toml
msmonitor/plugin/: CMakeLists.txt  README.md  bindings.cpp  build.sh  setup.py
msmonitor/plugin/IPCMonitor/: __init__.py  dynamic_monitor_proxy.py  singleton.py  utils.py
msmonitor/plugin/cmake/: Findglog.cmake  Findnlohmannjson.cmake  Findsqlite3.cmake  config.ini  download_opensource.sh  utils.cmake
msmonitor/plugin/ipc_monitor/: DynoLogNpuMonitor.cpp  DynoLogNpuMonitor.h  InputParser.cpp  InputParser.h  MonitorBase.h  NpuIpcClient.cpp  NpuIpcClient.h  NpuIpcEndPoint.h  PyDynamicMonitorProxy.h  TimerTask.h  singleton.h  thread.h  utils.cpp  utils.h
msmonitor/plugin/stub/: build_stub.sh  mspti.cpp
(+2881 files in other folders)
