[package]
name = "dyno"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.0", features = ["derive"]}
serde_json = "1.0"
rustls = "0.21.0"
rustls-pemfile = "1.0"
webpki = "0.22"

[net]
git-fetch-with-cli = true

[build]
rustflags = [
    "-C", "relocation_model=pie",
    "-C", "link-args=-Wl,-z,now",
    "-C", "link-args=-Wl,-z,relro",
    "-C", "strip=symbols",
    "-C", "overflow_checks"
]