[package]
name = "dyno"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.0", features = ["derive"]}
serde_json = "1.0"
rustls = "0.21.0"
rustls-pemfile = "1.0"
webpki = "0.22"
x509-parser = "0.15"
der-parser = "8"
pem = "1.1"
chrono = "0.4"
num-bigint = "0.4"
openssl = { version = "0.10", features = ["vendored"] }
rpassword = "7.2.0"

[net]
git-fetch-with-cli = true

[build]
rustflags = [
    "-C", "relocation_model=pie",
    "-C", "link-args=-Wl,-z,now",
    "-C", "link-args=-Wl,-z,relro",
    "-C", "strip=symbols",
    "-C", "overflow_checks",
    "-C", "link-args=-static-libgcc",
    "-C", "link-args=-static-libstdc++"
]
