[package]
name = "dyno"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
clap = { version = "4.4", features = ["derive"]}
serde_json = "1.0"
rustls = "0.21.0"
rustls-pemfile = "1.0"
webpki = "0.22"
x509-parser = "0.15"
der-parser = "8"
pem = "1.1"
chrono = "0.4"
num-bigint = "0.4"
openssl = { version = "0.10", features = ["vendored"] }
rpassword = "7.2.0"
